--- a/template/archive_search.html
+++ b/template/archive_search.html
@@ -1,3 +1,7 @@
+<html lang="ja">
+
+<body>
+
 <h1>アーカイブ検索</h1>
 
 <p>
@@ -221,3 +225,7 @@
     updateDisplay();
   }
 </script>
+
+</body>
+
+</html>
